04_DevKuber/03_KuberAdm/13.01_PoDepSrv/files/stage/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: main
  name: main
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - image: keqpup232/backend:1.1
          name: backend
          ports:
            - containerPort: 9000
              name: backend
        - image: keqpup232/frontend:1.1
          name: frontend
          ports:
            - containerPort: 8000
              name: frontend
