04_DevKuber/03_KuberAdm/13.01_PoDepSrv/files/stage/Statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  serviceName: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: local-volume
      containers:
      - name: postgres
        image: postgres:13-alpine
        volumeMounts:
        - name: data
          mountPath: /mnt
