04_DevKuber/03_KuberAdm/13.01_PoDepSrv/files/stage/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
  - host: db
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: db
            port:
              number: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              number: 8000
